Rename sheet 3, integrate unlabeled preprocessing

--- a/notebooks/naive_bayes_classifier_rnb.ipynb
+++ b/notebooks/naive_bayes_classifier_rnb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,26 +15,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load your data\n",
-    "data = pd.read_csv('~/Projects/water-ml/datasets/sheet_1.csv')"
+    "data = pd.read_csv('~/Projects/water-ml/datasets/sheet_1.csv')\n",
+    "\n",
+    "# Load labeled data\n",
+    "unlabeled_data = pd.read_csv('~/Projects/water-ml/datasets/sheet_3.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "target_columns = ['Scheme', 'Sample (reference)']\n",
     "\n",
+    "# Process labeled data\n",
     "X = data.drop(target_columns, axis=1)\n",
     "y = data['Scheme'].map({'Stable': 0, 'Failure': 1})\n",
     "\n",
     "X.replace('ND', 0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Process unlabeled data\n",
+    "unlabeled_X = unlabeled_data.drop(target_columns, axis=1)\n",
+    "\n",
+    "unlabeled_X.replace('ND', 0, inplace=True)"
    ]
   },
   {
