--- a/tower/deep_learning_classifier.ipynb
+++ b/tower/deep_learning_classifier.ipynb
@@ -367,7 +367,12 @@
     "stds = grid_result.cv_results_['std_test_score']\n",
     "params = grid_result.cv_results_['params']\n",
     "for mean, stdev, param in zip(means, stds, params):\n",
-    "    print(\"%f (%f) with: %r\" % (mean, stdev, param))\n"
+    "    print(\"%f (%f) with: %r\" % (mean, stdev, param))\n",
+    "\n",
+    "# Current Best:  \n",
+    "# 0.882428 (0.052831) with: {'l1_rate': 0.001, 'l2_rate': 0.1, 'learning_rate': 0.001}\n",
+    "\n",
+    "# Previous Best:\n"
    ]
   }
  ],
