--- a/notebooks/deep_learning_classifier_unlabeled.ipynb
+++ b/notebooks/deep_learning_classifier_unlabeled.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "dd8298e7",
    "metadata": {},
    "outputs": [
@@ -82,6 +82,27 @@
       "/home/matt/miniconda3/lib/python3.11/site-packages/sklearn/preprocessing/_encoders.py:972: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
       "  warnings.warn(\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0     NaN\n",
+       "1     NaN\n",
+       "2     NaN\n",
+       "3     NaN\n",
+       "4     NaN\n",
+       "       ..\n",
+       "225   NaN\n",
+       "226   NaN\n",
+       "227   NaN\n",
+       "228   NaN\n",
+       "229   NaN\n",
+       "Name: Scheme, Length: 230, dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -102,36 +123,27 @@
     "y_unlabeled = unlabeled_data['Scheme'].map({'Stable': 0, 'Failure': 1})\n",
     "\n",
     "scaler = StandardScaler()\n",
-    "X_unlabeled_scaled = scaler.fit_transform(X_unlabeled)"
+    "X_unlabeled_scaled = scaler.fit_transform(X_unlabeled)\n",
+    "\n",
+    "y_unlabeled"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "dcc1ca8d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[-0.47498395, -0.3939193 , -0.28398092, ..., -0.07071068,\n",
-       "        -0.07071068, -0.07071068],\n",
-       "       [-0.47498395, -0.3939193 , -0.28398092, ..., -0.07071068,\n",
-       "        -0.07071068, -0.07071068],\n",
-       "       [-0.47498395, -0.3939193 , -0.28398092, ..., -0.07071068,\n",
-       "        -0.07071068, -0.07071068],\n",
-       "       ...,\n",
-       "       [-0.47498395,  0.52793286, -0.28398092, ..., -0.07071068,\n",
-       "        -0.07071068, -0.07071068],\n",
-       "       [-0.47498395,  1.04720223, -0.28398092, ..., -0.07071068,\n",
-       "        -0.07071068, -0.07071068],\n",
-       "       [-0.47498395, -0.3939193 , -0.28398092, ..., -0.07071068,\n",
-       "        -0.07071068, -0.07071068]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "BaseSampler.fit_resample() missing 1 required positional argument: 'y'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m X_smote, y_smote \u001b[38;5;241m=\u001b[39m smote\u001b[38;5;241m.\u001b[39mfit_resample(X_train, y_train)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Balance the unlabeled data\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m X_unlabeled_smote \u001b[38;5;241m=\u001b[39m \u001b[43msmote\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit_resample\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_unlabeled_scaled\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: BaseSampler.fit_resample() missing 1 required positional argument: 'y'"
+     ]
     }
    ],
    "source": [
@@ -142,7 +154,11 @@
     "\n",
     "# Augmenting the dataset with SMOTE\n",
     "smote = SMOTE(random_state=42)\n",
-    "X_smote, y_smote = smote.fit_resample(X_train, y_train)"
+    "X_smote, y_smote = smote.fit_resample(X_train, y_train)\n",
+    "\n",
+    "# TODO: Fix the SMOTE for the unlabeled , need a y, currentl all NaN see the rnb+ impelmentation for fix\n",
+    "# Balance the unlabeled data\n",
+    "# X_unlabeled_smote = smote.fit_resample(X_unlabeled_scaled)"
    ]
   },
   {
