--- a/notebooks/new_classifiers.ipynb
+++ b/notebooks/new_classifiers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,13 +122,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/matt/miniconda3/lib/python3.11/site-packages/imblearn/ensemble/_easy_ensemble.py:286: FutureWarning: `base_estimator` was renamed to `estimator` in version 0.10 and will be removed in 0.12.\n",
+      "  warnings.warn(\n",
       "/home/matt/miniconda3/lib/python3.11/site-packages/imblearn/ensemble/_easy_ensemble.py:286: FutureWarning: `base_estimator` was renamed to `estimator` in version 0.10 and will be removed in 0.12.\n",
       "  warnings.warn(\n"
      ]
@@ -138,15 +140,20 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "eec = EasyEnsembleClassifier(n_estimators=10, base_estimator=RandomForestClassifier())\n",
+    "eec_smote = EasyEnsembleClassifier(n_estimators=10, base_estimator=RandomForestClassifier())\n",
     "eec.fit(X_train, y_train)\n",
+    "eec_smote.fit(X_train_smote, y_train_smote)\n",
     "\n",
     "y_pred = eec.predict(X_test)\n",
-    "cm = confusion_matrix(y_test, y_pred)"
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "y_pred_smote = eec_smote.predict(X_test)\n",
+    "cm_smote = confusion_matrix(y_test, y_pred_smote)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -154,24 +161,57 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[ 6 42]\n",
-      " [ 4 98]]\n",
+      "[[ 5 43]\n",
+      " [ 3 99]]\n",
       "\n",
-      "True Negatives (TN): 6\n",
-      "False Positives (FP): 42\n",
-      "False Negatives (FN): 4\n",
-      "True Positives (TP): 98\n",
+      "True Negatives (TN): 5\n",
+      "False Positives (FP): 43\n",
+      "False Negatives (FN): 3\n",
+      "True Positives (TP): 99\n",
       "\n",
       "Accuracy: 0.693\n",
-      "Precision: 0.700\n",
-      "Recall: 0.961\n",
-      "Specificity: 0.125\n",
-      "F1 Score: 0.810\n",
-      "Matthews Correlation Coefficient (MCC): 0.160\n"
+      "Precision: 0.697\n",
+      "Recall: 0.971\n",
+      "Specificity: 0.104\n",
+      "F1 Score: 0.811\n",
+      "Matthews Correlation Coefficient (MCC): 0.166\n"
      ]
     }
    ],
    "source": [
+    "# With SMOTE\n",
+    "print_confusion_matrix_report(cm_smote, y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "[[ 7 41]\n",
+      " [ 5 97]]\n",
+      "\n",
+      "True Negatives (TN): 7\n",
+      "False Positives (FP): 41\n",
+      "False Negatives (FN): 5\n",
+      "True Positives (TP): 97\n",
+      "\n",
+      "Accuracy: 0.693\n",
+      "Precision: 0.703\n",
+      "Recall: 0.951\n",
+      "Specificity: 0.146\n",
+      "F1 Score: 0.808\n",
+      "Matthews Correlation Coefficient (MCC): 0.166\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Without SMOTE\n",
     "print_confusion_matrix_report(cm, y_test, y_pred)"
    ]
   }
