Adasyn outperforms nb in Extratrees

--- a/notebooks/new_classifiers.ipynb
+++ b/notebooks/new_classifiers.ipynb
@@ -1285,6 +1285,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "def grid_search_augmented(X_train_smote, y_train_smote, X_train_gaussian, y_train_gaussian, X_train_adasyn, y_train_adasyn, X_test, y_test):\n",
+    "    # Define the parameter grid for ExtraTreesClassifier\n",
+    "    param_grid = {\n",
+    "        'n_estimators': [50, 100, 200],\n",
+    "        'max_depth': [3, 5, 7, 10],\n",
+    "        'min_samples_split': [2, 5, 10],\n",
+    "        'min_samples_leaf': [1, 2, 4],\n",
+    "        'max_features': ['sqrt', 'log2', None]\n",
+    "    }\n",
+    "\n",
+    "    # Define the ExtraTreesClassifier model\n",
+    "    model = ExtraTreesClassifier()\n",
+    "\n",
+    "    # Perform grid search for each augmentation method\n",
+    "    print(\"Grid search for ExtraTreesClassifier:\")\n",
+    "\n",
+    "    # SMOTE\n",
+    "    print(\"SMOTE:\")\n",
+    "    grid_search_smote = GridSearchCV(\n",
+    "        estimator=model,\n",
+    "        param_grid=param_grid,\n",
+    "        scoring='accuracy',\n",
+    "        cv=10,\n",
+    "        n_jobs=-1,\n",
+    "        verbose=1\n",
+    "    )\n",
+    "    grid_search_smote.fit(X_train_smote, y_train_smote)\n",
+    "    best_model_smote = grid_search_smote.best_estimator_\n",
+    "    y_pred_smote = best_model_smote.predict(X_test)\n",
+    "    accuracy_smote = accuracy_score(y_test, y_pred_smote)\n",
+    "    print(f\"Best parameters for ExtraTreesClassifier with SMOTE: {grid_search_smote.best_params_}\")\n",
+    "    print(f\"Test set accuracy for ExtraTreesClassifier with SMOTE: {accuracy_smote}\")\n",
+    "    print()\n",
+    "\n",
+    "    # Gaussian\n",
+    "    print(\"Gaussian:\")\n",
+    "    grid_search_gaussian = GridSearchCV(\n",
+    "        estimator=model,\n",
+    "        param_grid=param_grid,\n",
+    "        scoring='accuracy',\n",
+    "        cv=10,\n",
+    "        n_jobs=-1,\n",
+    "        verbose=1\n",
+    "    )\n",
+    "    grid_search_gaussian.fit(X_train_gaussian, y_train_gaussian)\n",
+    "    best_model_gaussian = grid_search_gaussian.best_estimator_\n",
+    "    y_pred_gaussian = best_model_gaussian.predict(X_test)\n",
+    "    accuracy_gaussian = accuracy_score(y_test, y_pred_gaussian)\n",
+    "    print(f\"Best parameters for ExtraTreesClassifier with Gaussian: {grid_search_gaussian.best_params_}\")\n",
+    "    print(f\"Test set accuracy for ExtraTreesClassifier with Gaussian: {accuracy_gaussian}\")\n",
+    "    print()\n",
+    "\n",
+    "    # ADASYN\n",
+    "    print(\"ADASYN:\")\n",
+    "    grid_search_adasyn = GridSearchCV(\n",
+    "        estimator=model,\n",
+    "        param_grid=param_grid,\n",
+    "        scoring='accuracy',\n",
+    "        cv=10,\n",
+    "        n_jobs=-1,\n",
+    "        verbose=1\n",
+    "    )\n",
+    "    grid_search_adasyn.fit(X_train_adasyn, y_train_adasyn)\n",
+    "    best_model_adasyn = grid_search_adasyn.best_estimator_\n",
+    "    y_pred_adasyn = best_model_adasyn.predict(X_test)\n",
+    "    accuracy_adasyn = accuracy_score(y_test, y_pred_adasyn)\n",
+    "    print(f\"Best parameters for ExtraTreesClassifier with ADASYN: {grid_search_adasyn.best_params_}\")\n",
+    "    print(f\"Test set accuracy for ExtraTreesClassifier with ADASYN: {accuracy_adasyn}\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grid search for ExtraTreesClassifier:\n",
+      "SMOTE:\n",
+      "Fitting 10 folds for each of 324 candidates, totalling 3240 fits\n",
+      "Best parameters for ExtraTreesClassifier with SMOTE: {'max_depth': 3, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 50}\n",
+      "Test set accuracy for ExtraTreesClassifier with SMOTE: 0.82\n",
+      "\n",
+      "Gaussian:\n",
+      "Fitting 10 folds for each of 324 candidates, totalling 3240 fits\n",
+      "Best parameters for ExtraTreesClassifier with Gaussian: {'max_depth': 3, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 50}\n",
+      "Test set accuracy for ExtraTreesClassifier with Gaussian: 0.7933333333333333\n",
+      "\n",
+      "ADASYN:\n",
+      "Fitting 10 folds for each of 324 candidates, totalling 3240 fits\n",
+      "Best parameters for ExtraTreesClassifier with ADASYN: {'max_depth': 3, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 50}\n",
+      "Test set accuracy for ExtraTreesClassifier with ADASYN: 0.8533333333333334\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "grid_search_augmented(X_train_smote, y_train_smote, X_train_gaussian, y_train_gaussian, X_train_adasyn, y_train_adasyn, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
