Releativly good performance with adasyn

--- a/notebooks/new_classifiers.ipynb
+++ b/notebooks/new_classifiers.ipynb
@@ -1398,118 +1398,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import GridSearchCV, LeaveOneOut\n",
-    "from sklearn.ensemble import ExtraTreesClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "def grid_search_augmented_loo(X_train_smote, y_train_smote, X_train_gaussian, y_train_gaussian, X_train_adasyn, y_train_adasyn, X_test, y_test):\n",
-    "    # Define the parameter grid for ExtraTreesClassifier\n",
-    "    param_grid = {\n",
-    "        'n_estimators': [50, 100, 200],\n",
-    "        'max_depth': [3, 5, 7, 10],\n",
-    "        'min_samples_split': [2, 5, 10],\n",
-    "        'min_samples_leaf': [1, 2, 4],\n",
-    "        'max_features': ['sqrt', 'log2', None]\n",
-    "    }\n",
-    "\n",
-    "    # Define the ExtraTreesClassifier model\n",
-    "    model = ExtraTreesClassifier()\n",
-    "\n",
-    "    # Create the LeaveOneOut object\n",
-    "    loo = LeaveOneOut()\n",
-    "\n",
-    "    # Perform grid search for each augmentation method\n",
-    "    print(\"Grid search for ExtraTreesClassifier:\")\n",
-    "\n",
-    "    # SMOTE\n",
-    "    print(\"SMOTE:\")\n",
-    "    grid_search_smote = GridSearchCV(\n",
-    "        estimator=model,\n",
-    "        param_grid=param_grid,\n",
-    "        scoring='accuracy',\n",
-    "        cv=loo,\n",
-    "        n_jobs=-1,\n",
-    "        verbose=1\n",
-    "    )\n",
-    "    grid_search_smote.fit(X_train_smote, y_train_smote)\n",
-    "    best_model_smote = grid_search_smote.best_estimator_\n",
-    "    y_pred_smote = best_model_smote.predict(X_test)\n",
-    "    accuracy_smote = accuracy_score(y_test, y_pred_smote)\n",
-    "    print(f\"Best parameters for ExtraTreesClassifier with SMOTE: {grid_search_smote.best_params_}\")\n",
-    "    print(f\"Test set accuracy for ExtraTreesClassifier with SMOTE: {accuracy_smote}\")\n",
-    "    print()\n",
-    "\n",
-    "    # Gaussian\n",
-    "    print(\"Gaussian:\")\n",
-    "    grid_search_gaussian = GridSearchCV(\n",
-    "        estimator=model,\n",
-    "        param_grid=param_grid,\n",
-    "        scoring='accuracy',\n",
-    "        cv=loo,\n",
-    "        n_jobs=-1,\n",
-    "        verbose=1\n",
-    "    )\n",
-    "    grid_search_gaussian.fit(X_train_gaussian, y_train_gaussian)\n",
-    "    best_model_gaussian = grid_search_gaussian.best_estimator_\n",
-    "    y_pred_gaussian = best_model_gaussian.predict(X_test)\n",
-    "    accuracy_gaussian = accuracy_score(y_test, y_pred_gaussian)\n",
-    "    print(f\"Best parameters for ExtraTreesClassifier with Gaussian: {grid_search_gaussian.best_params_}\")\n",
-    "    print(f\"Test set accuracy for ExtraTreesClassifier with Gaussian: {accuracy_gaussian}\")\n",
-    "    print()\n",
-    "\n",
-    "    # ADASYN\n",
-    "    print(\"ADASYN:\")\n",
-    "    grid_search_adasyn = GridSearchCV(\n",
-    "        estimator=model,\n",
-    "        param_grid=param_grid,\n",
-    "        scoring='accuracy',\n",
-    "        cv=loo,\n",
-    "        n_jobs=-1,\n",
-    "        verbose=1\n",
-    "    )\n",
-    "    grid_search_adasyn.fit(X_train_adasyn, y_train_adasyn)\n",
-    "    best_model_adasyn = grid_search_adasyn.best_estimator_\n",
-    "    y_pred_adasyn = best_model_adasyn.predict(X_test)\n",
-    "    accuracy_adasyn = accuracy_score(y_test, y_pred_adasyn)\n",
-    "    print(f\"Best parameters for ExtraTreesClassifier with ADASYN: {grid_search_adasyn.best_params_}\")\n",
-    "    print(f\"Test set accuracy for ExtraTreesClassifier with ADASYN: {accuracy_adasyn}\")\n",
-    "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grid search for ExtraTreesClassifier:\n",
-      "SMOTE:\n",
-      "Fitting 48 folds for each of 324 candidates, totalling 15552 fits\n",
-      "Best parameters for ExtraTreesClassifier with SMOTE: {'max_depth': 3, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 50}\n",
-      "Test set accuracy for ExtraTreesClassifier with SMOTE: 0.8333333333333334\n",
+      "Grid search for ExtraTreesClassifier with ADASYN:\n",
+      "Fitting 10 folds for each of 2160 candidates, totalling 21600 fits\n",
       "\n",
-      "Gaussian:\n",
-      "Fitting 48 folds for each of 324 candidates, totalling 15552 fits\n",
-      "Best parameters for ExtraTreesClassifier with Gaussian: {'max_depth': 3, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 50}\n",
-      "Test set accuracy for ExtraTreesClassifier with Gaussian: 0.7466666666666667\n",
+      "Top 3 Models based on Accuracy:\n",
       "\n",
-      "ADASYN:\n",
-      "Fitting 48 folds for each of 324 candidates, totalling 15552 fits\n",
-      "Best parameters for ExtraTreesClassifier with ADASYN: {'max_depth': 3, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 50}\n",
-      "Test set accuracy for ExtraTreesClassifier with ADASYN: 0.8266666666666667\n",
-      "\n"
+      "Top 1 Model:\n",
+      "Confusion Matrix:\n",
+      "[[ 5 43]\n",
+      " [ 3 99]]\n",
+      "\n",
+      "True Negatives (TN): 5\n",
+      "False Positives (FP): 43\n",
+      "False Negatives (FN): 3\n",
+      "True Positives (TP): 99\n",
+      "\n",
+      "Accuracy: 0.693\n",
+      "Precision: 0.697\n",
+      "Recall: 0.971\n",
+      "Specificity: 0.104\n",
+      "F1 Score: 0.811\n",
+      "Matthews Correlation Coefficient (MCC): 0.155\n",
+      "\n",
+      "Top 2 Model:\n",
+      "Confusion Matrix:\n",
+      "[[10 38]\n",
+      " [ 5 97]]\n",
+      "\n",
+      "True Negatives (TN): 10\n",
+      "False Positives (FP): 38\n",
+      "False Negatives (FN): 5\n",
+      "True Positives (TP): 97\n",
+      "\n",
+      "Accuracy: 0.713\n",
+      "Precision: 0.719\n",
+      "Recall: 0.951\n",
+      "Specificity: 0.208\n",
+      "F1 Score: 0.819\n",
+      "Matthews Correlation Coefficient (MCC): 0.248\n",
+      "\n",
+      "Top 3 Model:\n",
+      "Confusion Matrix:\n",
+      "[[28 20]\n",
+      " [ 5 97]]\n",
+      "\n",
+      "True Negatives (TN): 28\n",
+      "False Positives (FP): 20\n",
+      "False Negatives (FN): 5\n",
+      "True Positives (TP): 97\n",
+      "\n",
+      "Accuracy: 0.833\n",
+      "Precision: 0.829\n",
+      "Recall: 0.951\n",
+      "Specificity: 0.583\n",
+      "F1 Score: 0.886\n",
+      "Matthews Correlation Coefficient (MCC): 0.602\n",
+      "\n",
+      "Top 3 Models based on MCC Score:\n",
+      "\n",
+      "Top 1 Model:\n",
+      "Confusion Matrix:\n",
+      "[[28 20]\n",
+      " [ 7 95]]\n",
+      "\n",
+      "True Negatives (TN): 28\n",
+      "False Positives (FP): 20\n",
+      "False Negatives (FN): 7\n",
+      "True Positives (TP): 95\n",
+      "\n",
+      "Accuracy: 0.820\n",
+      "Precision: 0.826\n",
+      "Recall: 0.931\n",
+      "Specificity: 0.583\n",
+      "F1 Score: 0.876\n",
+      "Matthews Correlation Coefficient (MCC): 0.568\n",
+      "\n",
+      "Top 2 Model:\n",
+      "Confusion Matrix:\n",
+      "[[  4  44]\n",
+      " [  2 100]]\n",
+      "\n",
+      "True Negatives (TN): 4\n",
+      "False Positives (FP): 44\n",
+      "False Negatives (FN): 2\n",
+      "True Positives (TP): 100\n",
+      "\n",
+      "Accuracy: 0.693\n",
+      "Precision: 0.694\n",
+      "Recall: 0.980\n",
+      "Specificity: 0.083\n",
+      "F1 Score: 0.813\n",
+      "Matthews Correlation Coefficient (MCC): 0.152\n",
+      "\n",
+      "Top 3 Model:\n",
+      "Confusion Matrix:\n",
+      "[[13 35]\n",
+      " [ 5 97]]\n",
+      "\n",
+      "True Negatives (TN): 13\n",
+      "False Positives (FP): 35\n",
+      "False Negatives (FN): 5\n",
+      "True Positives (TP): 97\n",
+      "\n",
+      "Accuracy: 0.733\n",
+      "Precision: 0.735\n",
+      "Recall: 0.951\n",
+      "Specificity: 0.271\n",
+      "F1 Score: 0.829\n",
+      "Matthews Correlation Coefficient (MCC): 0.318\n",
+      "\n",
+      "Best parameters for ExtraTreesClassifier with ADASYN (based on accuracy): {'bootstrap': True, 'criterion': 'gini', 'max_depth': 3, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 50}\n"
      ]
     }
    ],
    "source": [
-    "grid_search_augmented_loo(X_train_smote, y_train_smote, X_train_gaussian, y_train_gaussian, X_train_adasyn, y_train_adasyn, X_test, y_test)"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "from sklearn.metrics import confusion_matrix, matthews_corrcoef, make_scorer, accuracy_score\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import warnings\n",
+    "\n",
+    "def print_confusion_matrix_report(cm, y_true, y_pred):\n",
+    "    tn, fp, fn, tp = cm.ravel()\n",
+    "    total = np.sum(cm)\n",
+    "    accuracy = (tp + tn) / total\n",
+    "    precision = tp / (tp + fp) if (tp + fp) != 0 else 0\n",
+    "    recall = tp / (tp + fn) if (tp + fn) != 0 else 0\n",
+    "    specificity = tn / (tn + fp) if (tn + fp) != 0 else 0\n",
+    "    f1_score = 2 * (precision * recall) / (precision + recall) if (precision + recall) != 0 else 0\n",
+    "    mcc = matthews_corrcoef(y_true, y_pred)\n",
+    "    print(\"Confusion Matrix:\")\n",
+    "    print(cm)\n",
+    "    print()\n",
+    "    print(f\"True Negatives (TN): {tn}\")\n",
+    "    print(f\"False Positives (FP): {fp}\")\n",
+    "    print(f\"False Negatives (FN): {fn}\")\n",
+    "    print(f\"True Positives (TP): {tp}\")\n",
+    "    print()\n",
+    "    print(f\"Accuracy: {accuracy:.3f}\")\n",
+    "    print(f\"Precision: {precision:.3f}\")\n",
+    "    print(f\"Recall: {recall:.3f}\")\n",
+    "    print(f\"Specificity: {specificity:.3f}\")\n",
+    "    print(f\"F1 Score: {f1_score:.3f}\")\n",
+    "    print(f\"Matthews Correlation Coefficient (MCC): {mcc:.3f}\")\n",
+    "    if precision == 0 and recall == 0:\n",
+    "        warnings.warn(\"Precision and Recall are both zero. F1 Score may not be meaningful.\")\n",
+    "    if tn + fp == 0:\n",
+    "        warnings.warn(\"No negative samples. Specificity may not be meaningful.\")\n",
+    "\n",
+    "def fit_model(model, X_train, y_train, X_test, y_test):\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    cm = confusion_matrix(y_test, y_pred)\n",
+    "    print_confusion_matrix_report(cm, y_test, y_pred)\n",
+    "    return model\n",
+    "\n",
+    "def grid_search_augmented(X_train_adasyn, y_train_adasyn, X_test, y_test):\n",
+    "    # Define the expanded parameter grid for ExtraTreesClassifier\n",
+    "    param_grid = {\n",
+    "        'n_estimators': [50, 100, 200, 300],\n",
+    "        'max_depth': [3, 5, 7, 10, None],\n",
+    "        'min_samples_split': [2, 5, 10],\n",
+    "        'min_samples_leaf': [1, 2, 4],\n",
+    "        'max_features': ['sqrt', 'log2', None],\n",
+    "        'bootstrap': [True, False],\n",
+    "        'criterion': ['gini', 'entropy']\n",
+    "    }\n",
+    "\n",
+    "    # Define the ExtraTreesClassifier model\n",
+    "    model = ExtraTreesClassifier()\n",
+    "\n",
+    "    # Define the scoring functions\n",
+    "    scoring = {\n",
+    "        'accuracy': make_scorer(accuracy_score),\n",
+    "        'mcc': make_scorer(matthews_corrcoef)\n",
+    "    }\n",
+    "\n",
+    "    # Perform grid search for ADASYN\n",
+    "    print(\"Grid search for ExtraTreesClassifier with ADASYN:\")\n",
+    "    grid_search_adasyn = GridSearchCV(\n",
+    "        estimator=model,\n",
+    "        param_grid=param_grid,\n",
+    "        scoring=scoring,\n",
+    "        refit='accuracy',  # Specify the metric to use for refitting the best model\n",
+    "        cv=10,\n",
+    "        n_jobs=-1,\n",
+    "        verbose=1\n",
+    "    )\n",
+    "    grid_search_adasyn.fit(X_train_adasyn, y_train_adasyn)\n",
+    "    \n",
+    "    # Get the top three models based on accuracy\n",
+    "    top_indices_accuracy = np.argsort(grid_search_adasyn.cv_results_['rank_test_accuracy'])[:3]\n",
+    "    top_models_accuracy = [pd.DataFrame(grid_search_adasyn.cv_results_).iloc[i] for i in top_indices_accuracy]\n",
+    "    \n",
+    "    # Get the top three models based on MCC score\n",
+    "    top_indices_mcc = np.argsort(grid_search_adasyn.cv_results_['rank_test_mcc'])[:3]\n",
+    "    top_models_mcc = [pd.DataFrame(grid_search_adasyn.cv_results_).iloc[i] for i in top_indices_mcc]\n",
+    "    \n",
+    "    # Evaluate the top three models based on accuracy\n",
+    "    print(\"\\nTop 3 Models based on Accuracy:\")\n",
+    "    for i, model_params in enumerate(top_models_accuracy, start=1):\n",
+    "        print(f\"\\nTop {i} Model:\")\n",
+    "        model = ExtraTreesClassifier(**model_params['params'])\n",
+    "        fit_model(model, X_train_adasyn, y_train_adasyn, X_test, y_test)\n",
+    "    \n",
+    "    # Evaluate the top three models based on MCC score\n",
+    "    print(\"\\nTop 3 Models based on MCC Score:\")\n",
+    "    for i, model_params in enumerate(top_models_mcc, start=1):\n",
+    "        print(f\"\\nTop {i} Model:\")\n",
+    "        model = ExtraTreesClassifier(**model_params['params'])\n",
+    "        fit_model(model, X_train_adasyn, y_train_adasyn, X_test, y_test)\n",
+    "    \n",
+    "    print(f\"\\nBest parameters for ExtraTreesClassifier with ADASYN (based on accuracy): {grid_search_adasyn.best_params_}\")\n",
+    "\n",
+    "# Example usage\n",
+    "grid_search_augmented(X_train_adasyn, y_train_adasyn, X_test, y_test)"
    ]
   },
   {
