Beat MCC and accuracy

--- a/notebooks/new_classifiers.ipynb
+++ b/notebooks/new_classifiers.ipynb
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1408,113 +1408,41 @@
       "Grid search for ExtraTreesClassifier with ADASYN:\n",
       "Fitting 10 folds for each of 2160 candidates, totalling 21600 fits\n",
       "\n",
-      "Top 3 Models based on Accuracy:\n",
-      "\n",
-      "Top 1 Model:\n",
+      "Best Model based on Accuracy:\n",
+      "Best parameters: {'bootstrap': True, 'criterion': 'gini', 'max_depth': 3, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 50}\n",
       "Confusion Matrix:\n",
-      "[[ 5 43]\n",
-      " [ 3 99]]\n",
-      "\n",
-      "True Negatives (TN): 5\n",
-      "False Positives (FP): 43\n",
-      "False Negatives (FN): 3\n",
-      "True Positives (TP): 99\n",
-      "\n",
-      "Accuracy: 0.693\n",
-      "Precision: 0.697\n",
-      "Recall: 0.971\n",
-      "Specificity: 0.104\n",
-      "F1 Score: 0.811\n",
-      "Matthews Correlation Coefficient (MCC): 0.155\n",
-      "\n",
-      "Top 2 Model:\n",
-      "Confusion Matrix:\n",
-      "[[10 38]\n",
-      " [ 5 97]]\n",
-      "\n",
-      "True Negatives (TN): 10\n",
-      "False Positives (FP): 38\n",
-      "False Negatives (FN): 5\n",
-      "True Positives (TP): 97\n",
-      "\n",
-      "Accuracy: 0.713\n",
-      "Precision: 0.719\n",
-      "Recall: 0.951\n",
-      "Specificity: 0.208\n",
-      "F1 Score: 0.819\n",
-      "Matthews Correlation Coefficient (MCC): 0.248\n",
-      "\n",
-      "Top 3 Model:\n",
-      "Confusion Matrix:\n",
-      "[[28 20]\n",
-      " [ 5 97]]\n",
-      "\n",
-      "True Negatives (TN): 28\n",
-      "False Positives (FP): 20\n",
-      "False Negatives (FN): 5\n",
-      "True Positives (TP): 97\n",
-      "\n",
-      "Accuracy: 0.833\n",
-      "Precision: 0.829\n",
-      "Recall: 0.951\n",
-      "Specificity: 0.583\n",
-      "F1 Score: 0.886\n",
-      "Matthews Correlation Coefficient (MCC): 0.602\n",
-      "\n",
-      "Top 3 Models based on MCC Score:\n",
-      "\n",
-      "Top 1 Model:\n",
-      "Confusion Matrix:\n",
-      "[[28 20]\n",
-      " [ 7 95]]\n",
-      "\n",
-      "True Negatives (TN): 28\n",
-      "False Positives (FP): 20\n",
-      "False Negatives (FN): 7\n",
-      "True Positives (TP): 95\n",
-      "\n",
-      "Accuracy: 0.820\n",
-      "Precision: 0.826\n",
-      "Recall: 0.931\n",
-      "Specificity: 0.583\n",
-      "F1 Score: 0.876\n",
-      "Matthews Correlation Coefficient (MCC): 0.568\n",
-      "\n",
-      "Top 2 Model:\n",
-      "Confusion Matrix:\n",
-      "[[  4  44]\n",
-      " [  2 100]]\n",
+      "[[ 4 44]\n",
+      " [ 4 98]]\n",
       "\n",
       "True Negatives (TN): 4\n",
       "False Positives (FP): 44\n",
-      "False Negatives (FN): 2\n",
-      "True Positives (TP): 100\n",
+      "False Negatives (FN): 4\n",
+      "True Positives (TP): 98\n",
       "\n",
-      "Accuracy: 0.693\n",
-      "Precision: 0.694\n",
-      "Recall: 0.980\n",
+      "Accuracy: 0.680\n",
+      "Precision: 0.690\n",
+      "Recall: 0.961\n",
       "Specificity: 0.083\n",
-      "F1 Score: 0.813\n",
-      "Matthews Correlation Coefficient (MCC): 0.152\n",
+      "F1 Score: 0.803\n",
+      "Matthews Correlation Coefficient (MCC): 0.092\n",
       "\n",
-      "Top 3 Model:\n",
+      "Best Model based on MCC Score:\n",
+      "Best parameters: {'bootstrap': True, 'criterion': 'gini', 'max_depth': 3, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 50}\n",
       "Confusion Matrix:\n",
-      "[[13 35]\n",
-      " [ 5 97]]\n",
+      "[[34 14]\n",
+      " [ 7 95]]\n",
       "\n",
-      "True Negatives (TN): 13\n",
-      "False Positives (FP): 35\n",
-      "False Negatives (FN): 5\n",
-      "True Positives (TP): 97\n",
+      "True Negatives (TN): 34\n",
+      "False Positives (FP): 14\n",
+      "False Negatives (FN): 7\n",
+      "True Positives (TP): 95\n",
       "\n",
-      "Accuracy: 0.733\n",
-      "Precision: 0.735\n",
-      "Recall: 0.951\n",
-      "Specificity: 0.271\n",
-      "F1 Score: 0.829\n",
-      "Matthews Correlation Coefficient (MCC): 0.318\n",
-      "\n",
-      "Best parameters for ExtraTreesClassifier with ADASYN (based on accuracy): {'bootstrap': True, 'criterion': 'gini', 'max_depth': 3, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 50}\n"
+      "Accuracy: 0.860\n",
+      "Precision: 0.872\n",
+      "Recall: 0.931\n",
+      "Specificity: 0.708\n",
+      "F1 Score: 0.900\n",
+      "Matthews Correlation Coefficient (MCC): 0.670\n"
      ]
     }
    ],
@@ -1594,30 +1522,25 @@
     "        verbose=1\n",
     "    )\n",
     "    grid_search_adasyn.fit(X_train_adasyn, y_train_adasyn)\n",
-    "    \n",
-    "    # Get the top three models based on accuracy\n",
-    "    top_indices_accuracy = np.argsort(grid_search_adasyn.cv_results_['rank_test_accuracy'])[:3]\n",
-    "    top_models_accuracy = [pd.DataFrame(grid_search_adasyn.cv_results_).iloc[i] for i in top_indices_accuracy]\n",
-    "    \n",
-    "    # Get the top three models based on MCC score\n",
-    "    top_indices_mcc = np.argsort(grid_search_adasyn.cv_results_['rank_test_mcc'])[:3]\n",
-    "    top_models_mcc = [pd.DataFrame(grid_search_adasyn.cv_results_).iloc[i] for i in top_indices_mcc]\n",
-    "    \n",
-    "    # Evaluate the top three models based on accuracy\n",
-    "    print(\"\\nTop 3 Models based on Accuracy:\")\n",
-    "    for i, model_params in enumerate(top_models_accuracy, start=1):\n",
-    "        print(f\"\\nTop {i} Model:\")\n",
-    "        model = ExtraTreesClassifier(**model_params['params'])\n",
-    "        fit_model(model, X_train_adasyn, y_train_adasyn, X_test, y_test)\n",
-    "    \n",
-    "    # Evaluate the top three models based on MCC score\n",
-    "    print(\"\\nTop 3 Models based on MCC Score:\")\n",
-    "    for i, model_params in enumerate(top_models_mcc, start=1):\n",
-    "        print(f\"\\nTop {i} Model:\")\n",
-    "        model = ExtraTreesClassifier(**model_params['params'])\n",
-    "        fit_model(model, X_train_adasyn, y_train_adasyn, X_test, y_test)\n",
-    "    \n",
-    "    print(f\"\\nBest parameters for ExtraTreesClassifier with ADASYN (based on accuracy): {grid_search_adasyn.best_params_}\")\n",
+    "\n",
+    "    # Get the best model based on accuracy\n",
+    "    best_model_accuracy = grid_search_adasyn.best_estimator_\n",
+    "    best_params_accuracy = grid_search_adasyn.best_params_\n",
+    "\n",
+    "    # Get the best model based on MCC score\n",
+    "    best_index_mcc = np.argmax(grid_search_adasyn.cv_results_['mean_test_mcc'])\n",
+    "    best_params_mcc = grid_search_adasyn.cv_results_['params'][best_index_mcc]\n",
+    "    best_model_mcc = ExtraTreesClassifier(**best_params_mcc)\n",
+    "\n",
+    "    # Evaluate the best model based on accuracy\n",
+    "    print(\"\\nBest Model based on Accuracy:\")\n",
+    "    print(f\"Best parameters: {best_params_accuracy}\")\n",
+    "    fit_model(best_model_accuracy, X_train_adasyn, y_train_adasyn, X_test, y_test)\n",
+    "\n",
+    "    # Evaluate the best model based on MCC score\n",
+    "    print(\"\\nBest Model based on MCC Score:\")\n",
+    "    print(f\"Best parameters: {best_params_mcc}\")\n",
+    "    fit_model(best_model_mcc, X_train_adasyn, y_train_adasyn, X_test, y_test)\n",
     "\n",
     "# Example usage\n",
     "grid_search_augmented(X_train_adasyn, y_train_adasyn, X_test, y_test)"
